# AIgrading

./: .dockerignore  .gitignore  README.md  inference.py  pyproject.toml  requirements.txt  requirments.txt
generating_tile/: cws_generator.py  requirements.txt  save_cws.py
inference_slide/: predict_gp.py  ss1_final.py  ss1_stich.py  utils.py
